Added our own TOSfairness Terms of Service and Privacy Policy

--- a/app/views/websites/terms.html.erb
+++ b/app/views/websites/terms.html.erb
@@ -11,19 +11,26 @@
 
         <h5>Main Bullet Points</h5>
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><strong>The Right To Privacy:</strong> First, if you do not sign up, we do not collect any data about you at all except anonymous tracking data to determine which part of the world you are visiting from.  If you do sign up, we will NEVER sell, rent, or share any of your personal information with others without your express permission.  When you delete your account, we do not store any of your data on our servers.</li>
+            <br>
+            <li><strong>The Right to Equal, Fair, &amp; Reasonable Expression:</strong> As a registered user, you can say anything here that you want, as long as you don't repeatedly use foul language.  Please express yourself in a mature way, without profanity, and don't make posts that belittle an individual, that may result in harm or self-harm, or that are not backed up with a story that justifies your ratings, i.e. instead of saying "This company sucks!" explain what they did that makes you feel that way, i.e. "They kicked me off simply because I expressed my opinion."</li>
+            <br>
+            <li><strong>The Right to Control My Intellectual Property:</strong> We don't own anything you post and never will. You simply give us a non-exclusive license to share what you wrote with others through this website.  That's it.  You can request to remove any content at any time by writing to us at info @ break diving dot org.</li>
+            <br>
+            <li><strong>The Right to Sue:</strong> You can sue us if you feel we violated these terms of service or this privacy policy.  Prior to any lawsuit, however, you agree  to first make a reasonable attempt to negotiate a remedy with us directly, and give us a reasonable opportunity to assist you.  If such negotiations fail to resolve the issue, you may file suit in a court of law.  In accordance with the TOS Fairness bill of rights you may file suit in any valid courthouse in any country in the world where venue would otherwise be proper, but until we make $250,000/year or more, you would have to pay for any flight costs, hotel fees, food costs, and additional legal fees for appearance in a court outside of New York State, Westchester County.  In all cases, New York Law will be used to determine the outcome of the case.  Further, if the court finds that your lawsuit is frivolous, you will reimburse us for all costs of defense, travel, lodging, food, etc. that we are forced to incur.</li>
+            <br>
+            <li><strong>The Right to Low-Cost Arbitration:</strong>You can file arbitration against us if you feel we violated these terms of service or this privacy policy.  Prior to the filing of any arbitration, however, you agree to first make a reasonable attempt to negotiate a remedy with us directly, and give us a reasonable opportunity to assist you.  If such negotiations fail to resolve the issue, you may initiate arbitration.  In accordance with the TOS Fairness bill of rights you may initiate arbitration through any valid arbitration organization in any country in the world where venue would otherwise be proper, but until we make $250,000/year or more, you would have to pay for any flight costs, hotel fees, food costs, and additional legal fees for appearance in an arbitration hall outside of New York State, Westchester County.  In all cases, New York Law will be used to determine the outcome of the case.  If the arbitrator finds that your filing is frivolous, however, you will reimburse us for all costs of defense, travel, lodging, food, etc. that we are forced to incur.</li>
+            <br>
+            <li><strong>The Right to Join a Class Action:</strong> You may join any class action brought against us.</li>
+            <br>
+            <li><strong>The Right to No Hidden Terms or Fees:</strong> There are no hidden terms in this agreement, and you do not have to pay anything to use our service.</li>
+            <br>
+            <li><strong>The Right to Fair Process &amp; to Be Heard:</strong> We will not kick you off this service or delete any posts without first giving you, the user, a reason for the alleged terms of service violation, and without also providing you an opportunity to fix the alleged issue.  If after a reasonable period of time, the issue has not been fixed, we have the right to delete the comment and/or delete the user, subject to our fair appeal process.</li>
+            <br>
+            <li><strong>The Right to Appeal &amp; the Right to Return:</strong> If we have determined you have violated our terms of service and we have either removed or modified a post and/or deleted you as a user, you have the right to appeal.  During this appeal, we will (if you would like) post your name on our website listing all users who are currently appealing a decision by our staff, and you will be given a fair opportunity to explain to a higher level of authority within our company than the first level of authority why you feel there was no violation.  If this higher level of authority agrees with you, you will be reinstated and/or you will be allowed to repost.  If this higher level of authority agrees with the original staff member who made the initial decision, the original decision will stand, i.e. the post will remain modified and/or deleted, or you will be completely removed from the service with all data deleted.  If you are deleted as a user, do not fret: you will be entitled to return to the site after a reasonable period of time, such reasonable time to be decided by our staff, never to exceed one year.  You have the right to make a request once per month to be re-instated and it is your obligation to request re-instatement. If, upon your return, you make the same type of terms of service violation, and the same appeal process concurs, we reserve the right to forever remove you from the service.  While this is extreme, it is also fair to you, to our other users, and to us as a company. Finally, if you repeatedly create new accounts after you have been barred from the service in an effort to bypass our appeals decision, we reserve the right to file a lawsuit against you for tortious interference with business.  We think this scenario is highly unlikely, but we reserve that right in case a user becomes really meddlesome.</li>
+            <br> 
+            <li><strong>The Right to Reasonable Terms:</strong> The above terms and privacy policy are designed to be simple, easy to understand, and above all, fair to you, the user.  We believe that they are.</li>
           </ol>
-
-        <h5>Other</h5>
 
     </div>
     <div class="col-xs-12 col-md-3">
