--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -91,6 +91,14 @@ ul.contract-revision-list {
 
   table.company-list td:nth-of-type(1):before { content: "Company Name"; }
   table.company-list td:nth-of-type(2):before { content: "Web Site"; }
+  
+  .contract-table td{
+    display: inline-block;
+    //Seems really hacky. 
+    width: 50vw;
+    overflow-wrap: break-word;
+  }
+
 }
 
 // Small devices (landscape phones, less than 768px)
@@ -105,6 +113,7 @@ ul.contract-revision-list {
     margin-right: auto;
   }
 }
+
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
