--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -92,7 +92,7 @@ ul.contract-revision-list {
   table.company-list td:nth-of-type(1):before { content: "Company Name"; }
   table.company-list td:nth-of-type(2):before { content: "Web Site"; }
   
-  .contract-table td{
+  .table td{
     display: inline-block;
     //Seems really hacky. 
     width: 50vw;
