--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -16,7 +16,7 @@
     <!-- Tab panes -->
     <div class="tab-content">
       <div class="tab-pane active" id="contract" role="tabpanel">
-        <table class="table contract-table">
+        <table class="table">
           <tbody>
             <tr>
               <th scope="col">Contract Title</th>
