--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,6 +34,29 @@ main, header, footer {
           flex:1;
 }
 
+// Headings
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 240%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
 .list-group-item {
   display: list-item;
 }
@@ -61,7 +84,26 @@ ul.contract-revision-list {
   background-position: center;
   background-attachment: fixed;
   color: #fff;
+  -webkit-box-shadow: 0px 3px 8px #2a2a2a;
+          box-shadow: 0px 3px 8px #2a2a2a;
 }
+
+.request {
+  color: #fff;
+  border-color: #fff;
+  float: left;
+}
+
+.btn-search {
+  float: left;
+}
+
+.form-control {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 //Css for contracts > index.html.erb
 .dropdown-element{
