implemented waitlist list display

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,6 +1,13 @@
 <tr>
   <td><%= company.company_name %></td>
   <td><%= company.website %></td>
+  <td>
+    <% if company.contract_count == 0 %>
+      Waitlisted
+    <% else %>
+      &nbsp;
+    <% end %>
+  </td>
   <td><%= link_to 'View', company_contracts_path(company) %>
   </td>
 </tr>
