--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -10,6 +10,7 @@
             <tr>
               <th scope="col">Company Name</th>
               <th scope="col">Website</th>
+              <th scope="col">Status</th>
               <th scope="col"></th>
             </tr>
           </thead>
