--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -65,7 +65,7 @@ ul.contract-revision-list {
     top: -9999px;
     left: -9999px;
   }
-  
+
   .btn-search { margin-top: 15px;}
 
   table.company-list tr {
@@ -91,6 +91,7 @@ ul.contract-revision-list {
 
   table.company-list td:nth-of-type(1):before { content: "Company Name"; }
   table.company-list td:nth-of-type(2):before { content: "Web Site"; }
+  table.company-list td:nth-of-type(3):before { content: "Status"; }
 }
 
 // Small devices (landscape phones, less than 768px)
