--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,5 +1,5 @@
-<div id="hero">
-  <div class="container">
+<section id="hero">
+  <!-- <div class="container"> -->
   <!-- Main jumbotron for a primary marketing message or call to action -->
     <!-- <div class="jumbotron"> -->
       <div class="container">
@@ -38,11 +38,11 @@
          <p class="text-center"><strong>&#8623; SCROLL DOWN FOR THE TOP TENS &#8623;</strong></p>
       </div>
     <!-- </div> -->
-  </div>
-</div>
+  <!-- </div> -->
+</section>
 <br />
 <br />
-<div id="top-ten">
+<section id="top-ten">
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
@@ -91,4 +91,4 @@
         <hr>
     </div>
   </div>
-</div>
+</section>
