--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,66 +19,58 @@
   </head>
 
   <body>
-    <wrapper class="d-flex flex-column">
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-secondary">
-          <%= link_to "TOSfairness", root_path, :class => "navbar-brand" %>
-          <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarsExampleDefault" aria-label="Toggle navigation" type="button" data-target="#navbarsExampleDefault" data-toggle="collapse">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <div class="d-flex flex-column">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-secondary">
+        <%= link_to "TOSfairness", root_path, :class => "navbar-brand" %>
+        <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarsExampleDefault" aria-label="Toggle navigation" type="button" data-target="#navbarsExampleDefault" data-toggle="collapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <%= link_to "All Ratings", companies_path, :class => "nav-link" %>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/team">The Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/bill_of_rights">The Bill of Rights</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/rating_system">The Rating System</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/break_diving">Break Diving</a>
-              </li>
-                <a class="nav-link" href="/volunteer">Volunteer</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/donate">Donate</a>
-              </li>
-
-
-            </ul>
-            <ul class="navbar-nav justify-content-end">
-              <% if user_signed_in? %>
-                <li class="nav-item"><%= link_to "Profile", edit_user_registration_path, :class => "nav-link" %></li>
-                <li class="nav-item"><%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => "nav-link" %></li>
-              <% else %>
-                <li class="nav-item"><%= link_to "Sign In", new_user_session_path, :class => "nav-link" %></li>
-                <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, :class => "nav-link" %></li>
-              <% end %>
-            </ul>
-          </div>
-        </nav>
-      </header>
-      <main role="main" class="container pt-4">
-        <div class="pt-4">
-          <% if notice.present? %>
-            <p class="alert alert-info"><%= notice %></p>
-          <% end %>
-
-          <% if alert.present? %>
-            <p class="alert alert-danger"><%= alert %></p>
-          <% end %>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <%= link_to "All Ratings", companies_path, :class => "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/team">The Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/bill_of_rights">The Bill of Rights</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/rating_system">The Rating System</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/break_diving">Break Diving</a>
+            </li>
+              <a class="nav-link" href="/volunteer">Volunteer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/donate">Donate</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav justify-content-end">
+            <% if user_signed_in? %>
+              <li class="nav-item"><%= link_to "Profile", edit_user_registration_path, :class => "nav-link" %></li>
+              <li class="nav-item"><%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => "nav-link" %></li>
+            <% else %>
+              <li class="nav-item"><%= link_to "Sign In", new_user_session_path, :class => "nav-link" %></li>
+              <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, :class => "nav-link" %></li>
+            <% end %>
+          </ul>
         </div>
-        <%= yield %>
-      </main>
+      </nav>
+
+      <% if notice.present? %>
+        <p class='alert alert-info'><%= notice %></p>
+      <% end %>
+      <% if alert.present? %>
+        <p class='alert alert-danger'><%= alert %></p>
+      <% end %>
+      <%= yield %>
       <%= render "layouts/footer" %>
 
       <!-- Bootstrap core JavaScript
@@ -91,6 +83,6 @@
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 
-    </wrapper>
+    </div>
   </body>
 </html>
