--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/break_diving">Break Diving</a>
             </li>
+            <li class="nav-item">
               <a class="nav-link" href="/volunteer">Volunteer</a>
             </li>
             <li class="nav-item">
